--- a/index.html
+++ b/index.html
@@ -1,28 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>HRLogin</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-
-  <iframe 
+<iframe 
     id="app-frame"
-    src="https://script.google.com/macros/s/AKfycbyndxitnY8o-G1HUJ7_LUmo7h0Gv8uOnCzTl9MH9L0eFT4kE-nqFStb0G3YWTz8nGVzLA/exec"
+    src="https://script.google.com/macros/s/AKfycbwCD4RGio7WM_KwvWAmWkMmrcduhxmQdSMQ6u4_eOU5mIMX2Kr3pSzd6nUrC27A1ZCopg/exec" 
     width="100%"
     height="100%"
     frameborder="0"
     scrolling="yes"
-    allow="geolocation https://script.google.com https://*.googleusercontent.com; microphone; camera"
+    allow="geolocation https://script.google.com; microphone; camera"
     style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; border: none;">
-  </iframe>
-
-  <script>
-    // यह स्क्रिप्ट सुनिश्चित करती है कि पेज लोड होते ही iframe एक्टिव हो जाए
-    window.onload = function() {
-       var iframe = document.getElementById('app-frame');
-       if(iframe) { iframe.focus(); }
-    };
-  </script>
-</body>
-</html>
+</iframe>
